# UltraImageViewer

./: CMakeLists.txt  README.md
include/core/: Application.hpp  ImageDecoder.hpp  ImagePipeline.hpp  SimdUtils.hpp  ThreadPool.hpp
include/rendering/: Direct2DRenderer.hpp
include/ui/: GalleryView.hpp  ImageViewer.hpp  Theme.hpp  ViewManager.hpp
src/core/: Application.cpp  ImageDecoder.cpp  ImagePipeline.cpp  SimdUtils.cpp  ThreadPool.cpp
src/rendering/: Direct2DRenderer.cpp
src/ui/: GalleryView.cpp  ImageViewer.cpp  ViewManager.cpp
